initial database + API x Service x Database flow

--- a/BookLibrary.API/appsettings.json
+++ b/BookLibrary.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LibraryDb": "Data Source=.;Initial Catalog=LibraryDb;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
