--- a/BookLibrary.Infra/BookLibrary.Infra.csproj
+++ b/BookLibrary.Infra/BookLibrary.Infra.csproj
@@ -7,11 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.18">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookLibrary.Service\BookLibrary.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Context\Interfaces\" />
   </ItemGroup>
 
 </Project>
