--- a/BookLibrary.API/Dockerfile
+++ b/BookLibrary.API/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["book-library.csproj", "."]
-RUN dotnet restore "./book-library.csproj"
+COPY ["BookLibrary.API.csproj", "."]
+RUN dotnet restore "./BookLibrary.API.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "book-library.csproj" -c Release -o /app/build
+RUN dotnet build "BookLibrary.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "book-library.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "BookLibrary.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "book-library.dll"]
+ENTRYPOINT ["dotnet", "BookLibrary.API.dll"]
